# Learning-Diffusion-Models

./: README.md
alignment_lab/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
alignment_lab/artifacts/judge/: pa2_hh_judge_pack_10.md  pa2_hh_judge_pack_10_blinded.csv  pa2_hh_judge_pack_10_blinded.json  pa2_hh_judge_pack_10_key.csv  pa2_hh_judge_pack_10_key.json  pa2_hh_judge_pack_10_unblinded.csv  pa2_hh_judge_pack_10_unblinded.json
alignment_lab/artifacts/logs/: dpo_hh_rlhf.jsonl  grpo_hh_rlhf.jsonl  pa2_dpo_beta_001.jsonl  pa2_dpo_beta_010.jsonl  pa2_dpo_beta_050.jsonl  pa2_dpo_beta_100.jsonl  pa2_dpo_hh_rlhf.jsonl  pa2_grpo_hh_rlhf.jsonl  pa2_ppo_hh_rlhf.jsonl  pa2_rlvr_gsm8k.jsonl  pa2_rm_hh_rlhf.jsonl  pa2_sft_hh_rlhf.jsonl  ppo_hh_rlhf.jsonl  rlvr_gsm8k.jsonl  sft_hh_rlhf.jsonl
alignment_lab/artifacts/samples/: dpo_hh_rlhf_dpo_final_eval.csv  dpo_hh_rlhf_dpo_final_eval.json  dpo_hh_rlhf_policy_eval.csv  dpo_hh_rlhf_policy_eval.json  grpo_hh_rlhf_grpo_final_eval.csv  grpo_hh_rlhf_grpo_final_eval.json  grpo_hh_rlhf_policy_eval.csv  grpo_hh_rlhf_policy_eval.json  pa2_compare_test_samples.csv  pa2_compare_test_samples.json  pa2_dpo_beta_001_dpo_final_eval.csv  pa2_dpo_beta_010_ablation_eval_ablation.json  pa2_dpo_beta_050_ablation_eval_ablation.csv  pa2_dpo_beta_050_ablation_eval_ablation.json  pa2_dpo_beta_100_ablation_eval_ablation.csv  pa2_dpo_beta_100_dpo_final_eval.json  pa2_dpo_hh_rlhf_compare_eval_comparison.csv  pa2_dpo_hh_rlhf_dpo_eval_step_00150.csv  pa2_dpo_hh_rlhf_dpo_eval_step_00150.json  pa2_dpo_hh_rlhf_dpo_eval_step_00200.csv  pa2_dpo_hh_rlhf_dpo_eval_step_00200.json  pa2_dpo_hh_rlhf_dpo_final_eval.json  pa2_grpo_hh_rlhf_compare_eval_comparison.csv  pa2_grpo_hh_rlhf_grpo_eval_step_00050.csv  pa2_grpo_hh_rlhf_grpo_eval_step_00050.json  pa2_grpo_hh_rlhf_grpo_eval_step_00100.csv  pa2_grpo_hh_rlhf_grpo_eval_step_00100.json  pa2_grpo_hh_rlhf_grpo_eval_step_00150.json  (+36 more)
alignment_lab/configs/: defaults.yaml
alignment_lab/scripts/: check_imports.py  export_pa2_snapshot.py  run_pa2_pipeline.sh
alignment_lab/tests/: conftest.py  helpers.py
(+322 files in other folders)
