[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alignment-lab"
version = "0.1.0"
description = "Modular research-grade alignment framework for small-scale LLM experiments"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Alignment Lab" }
]
dependencies = [
  "accelerate>=0.30.0,<0.35.0",
  "bitsandbytes>=0.43.0,<0.44.0",
  "datasets>=2.19.0,<2.22.0",
  "matplotlib>=3.9.0,<3.10.0",
  "numpy>=1.26.0,<2.0.0",
  "packaging>=24.0,<25.0",
  "peft>=0.11.0,<0.13.0",
  "pyyaml>=6.0.1,<7.0.0",
  "pytest>=8.0.0,<9.0.0",
  "scipy>=1.12.0,<1.14.0",
  "torch>=2.2.0,<2.5.0",
  "tqdm>=4.66.0,<5.0.0",
  "transformers>=4.41.0,<4.45.0"
]

[project.optional-dependencies]
dev = [
  "pytest-cov>=5.0.0,<6.0.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
